--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #002758;">
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
   <!--
